--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./tailwind.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+}
+
+body { 
+  width: 100%;
+  height: 100%;
+}
+
+.Navbar{
+  width: 100%;
+  /* position: absolute; */
+  display: flex;
+  padding: 0px;
 }
 
 @media (prefers-color-scheme: dark) {
