--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,37 +1,22 @@
-@import "./tailwind.css";
+@import './tailwind.css';
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.Navbar {
+    background-color: #fff;
+    -webkit-backdrop-filter: blur(20px);
 }
 
-body { 
-  width: 100%;
-  height: 100%;
-}
-
-.Navbar{
-  width: 100%;
-  /* position: absolute; */
-  display: flex;
-  padding: 0px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.BG-page123 {
+    background-image: url(../../public/images/bkPage.jpg);
+    width: auto;
+    height: auto;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    height: 100%;
+    width: 100%;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(to bottom,
+            transparent,
+            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
