--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @import './tailwind.css';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600&display=swap');
 
 * {
+    font-family: 'Noto Sans Thai', sans-serif;
     padding: 0;
     margin: 0;
 }
