fix ui | cardpic

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,7 +62,7 @@ body {
 }
 
 .bgsearch {
-    background-image: url('/images/bgPageSearch.jpg');
+    background-image: url('/images/bkPage-1.jpg');
     background-size:auto;
     height: inherit;
     background-attachment: fixed;
