--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,4 +116,11 @@ body {
   transform: rotateY(180deg);
 }
 
-  
+/* notificate page */
+
+.notification-page {
+  background-image: url('/images/bkPage-1.jpg');
+  background-size:cover;
+  height:100%;
+  background-attachment: fixed;
+}
