--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -163,3 +163,7 @@ transform: translateY(-5px);
   color: black;
   border-radius: 20px;
 }
+.createContainer{
+  backdrop-filter: blur(15px);
+  background: rgba(255, 255, 255, 0.2);
+}
